--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Math for Kids</string>
+    <string name="company_name">
+        <font fgcolor="#F09E26">SET</font><font fgcolor="#319FF7">SOFT</font>
+    </string>
 </resources>
